--- a/Code/NTTV/templates/login.html
+++ b/Code/NTTV/templates/login.html
@@ -11,7 +11,7 @@
          crossorigin="anonymous"></script>
 </head>
 <body>
-    <div class="form-container">
+    <div class="login-container">
         <div class="form-wrapper">
             <div class="form-header">
                 <h1>Вхід до системи</h1>
@@ -34,12 +34,12 @@
                         </div>
                     </div>
                     
-                    <button type="submit" class="form-submit">Увійти</button>
+                    <button type="submit" class="form-submit">🚀 Увійти</button>
                 </form>
                 
                 <div class="form-footer">
                     <p>Немає акаунту? <a href="{{ url_for('register') }}">Створити акаунт</a></p>
-                    <a href="{{ url_for('index') }}" class="back-link">Повернутися на головну</a>
+                    <a href="{{ url_for('index') }}" class="back-link">← Повернутися на головну</a>
                 </div>
             </div>
         </div>
